--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: 3333的记事本
-subtitle:2020年10月11日，33决定和logos好好相处
+subtitle:33❤logos
 description: 我天下第一可爱
 author: 3yen
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
