--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: 33的记事本-和logos好好相处！
+title: 33的记事本
 subtitle: 有想说的话w
 description: 我天下第一可爱
 author: 3yen
