--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 # Site
 title: 33的记事本
-subtitle: 有想说的话w
-description: 我天下第一可爱
+subtitle: 我很坏的w
+description: logos说我天下第一可爱
 author: 3yen
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
